# internal/risk/handler/simulation.go
@@ -2,6 +2,7 @@ package risk
 
 import (
 	"net/http"
+	"qira/internal/interfaces"
 	simulation "qira/internal/risk/service/simulations"
 
 	"github.com/gin-gonic/gin"
@@ -48,9 +49,17 @@ func RiskMountReport(c *gin.Context) {
 // @Tags 13 - Simulation
 // @Accept json
 // @Produce json
+// @Param threatEvent header string true "Threat Event "
+// @Param email header string false "Email for recive "
 // @Router /simulation-aggregated [get]
 func RiskMountAggregated(c *gin.Context) {
-	//simulation.MonteCarloSimulationAggregated(c)
+	threatEvent := c.GetHeader("ThreatEvent")
+	if threatEvent == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "ThreatEvent header is required"})
+		return
+	}
+	email := c.GetHeader("Email")
+	simulation.MonteCarloSimulationAggregated(c, threatEvent, email)
 }
 
 // @Summary Test for simulation appetite
@@ -58,7 +67,22 @@ func RiskMountAggregated(c *gin.Context) {
 // @Tags 13 - Simulation
 // @Accept json
 // @Produce json
+// @Param request body []interfaces.LossExceedance true "Loss Exceedance Graph"
+// @Param threatEvent header string true "Threat Event "
+// @Param email header string false "Email for recive "
 // @Router /simulation-appetite [get]
 func RiskMountAppetite(c *gin.Context) {
-	//simulation.MonteCarloSimulationAppetite(c)
+	var lossData []interfaces.LossExceedance
+	if err := c.ShouldBindJSON(&lossData); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Parameters are invalid, need a JSON array of LossExceedance"})
+		return
+	}
+
+	threatEvent := c.GetHeader("ThreatEvent")
+	if threatEvent == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "ThreatEvent header is required"})
+		return
+	}
+	email := c.GetHeader("Email")
+	simulation.MonteCarloSimulationAppetite(c, threatEvent, email, lossData)
 }
